--- a/src/main/resources/templates/WebQuanly/employee/list.html
+++ b/src/main/resources/templates/WebQuanly/employee/list.html
@@ -26,7 +26,7 @@
     <table class="table table-bordered">
         <thead>
         <tr>
-            <th>ID</th>
+            <th>STT</th>
             <th>Full Name</th>
             <th>Email</th>
             <th>Phone</th>
@@ -35,8 +35,8 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="employee : ${employees}">
-            <td th:text="${employee.id}"></td>
+        <tr th:each="employee, Stat : ${employees}">
+            <td th:text="${Stat.index + 1}"></td>
             <td th:text="${employee.hoTen}"></td>
             <td th:text="${employee.email}"></td>
             <td th:text="${employee.soDienThoai}"></td>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="modal-body">
                     <form th:action="@{/employees/add}" th:object="${employee}" method="post">
-                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+
                         <div class="mb-3">
                             <label for="hoTen" class="form-label">Full Name</label>
                             <input type="text" class="form-control" id="hoTen" th:field="*{hoTen}" required>
@@ -143,7 +143,6 @@
                     </div>
                     <div class="modal-body">
                         <form th:action="@{/employees/edit}" method="post">
-                            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                             <input type="hidden" name="id" th:value="${employee.id}">
                             <div class="mb-3">
                                 <label for="hoTenEdit" class="form-label">Full Name</label>
@@ -201,7 +200,6 @@
                     <div class="modal-body">
                         <p>Are you sure you want to delete <span th:text="${employee.hoTen}"></span>?</p>
                         <form th:action="@{/employees/delete/{id}(id=${employee.id})}" method="post">
-                            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                             <button type="submit" class="btn btn-danger">Delete</button>
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                         </form>
