--- a/src/main/resources/templates/WebQuanly/customer/list.html
+++ b/src/main/resources/templates/WebQuanly/customer/list.html
@@ -28,6 +28,8 @@
         <tr>
             <th>ID</th>
             <th>Họ tên</th>
+            <th>Tn đăng nhập</th>
+            <th>Mật khẩu</th>
             <th>Email</th>
             <th>Số điện thoại</th>
             <th>Vai trò</th>
@@ -35,9 +37,12 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="customer : ${customers}">
-            <td th:text="${customer.id}"></td>
+        <tr th:each="customer, customerStat : ${customers}">
+            <td th:text="${customerStat.index + 1}"></td>
             <td th:text="${customer.hoTen}"></td>
+            <td th:text="${customer.tenDangNhap}"></td>
+            <td th:text="${customer.matKhau}"></td>
+
             <td th:text="${customer.email}"></td>
             <td th:text="${customer.soDienThoai}"></td>
             <td th:text="${customer.vaiTro}"></td>
