--- a/src/main/resources/templates/WebQuanly/employee/list.html
+++ b/src/main/resources/templates/WebQuanly/employee/list.html
@@ -28,6 +28,10 @@
         <tr>
             <th>ID</th>
             <th>Full Name</th>
+            <th>Tên đăng nhập</th>
+            <th>Mật khẩu</th>
+
+
             <th>Email</th>
             <th>Phone</th>
             <th>Role</th>
@@ -35,9 +39,11 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="employee : ${employees}">
-            <td th:text="${employee.id}"></td>
+        <tr th:each="employee, employeeStat : ${employees}">
+            <td th:text="${employeeStat.index + 1}"></td>
             <td th:text="${employee.hoTen}"></td>
+            <td th:text="${employee.tenDangNhap}"></td>
+            <td th:text="${employee.matKhau}"></td>
             <td th:text="${employee.email}"></td>
             <td th:text="${employee.soDienThoai}"></td>
             <td th:text="${employee.vaiTro}"></td>
@@ -88,7 +94,7 @@
                 </div>
                 <div class="modal-body">
                     <form th:action="@{/employees/add}" th:object="${employee}" method="post">
-                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+
                         <div class="mb-3">
                             <label for="hoTen" class="form-label">Full Name</label>
                             <input type="text" class="form-control" id="hoTen" th:field="*{hoTen}" required>
